<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.wizard</groupId>
	<artifactId>wizard-http</artifactId>
	<version>1.0.0.netty</version>
	<packaging>jar</packaging>

	<name>wizard-http</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mainClass>com.wizard.http.App</mainClass>

		<!-- dependency -->
		<junit.version>4.10</junit.version>
		<netty.version>3.2.7.Final</netty.version>

		<!-- build -->
		<java.version>1.7</java.version>
		<maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
		<maven-deploy-plugin.version>2.8-SNAPSHOT</maven-deploy-plugin.version>
		<maven-surefire-plugin.version>2.10</maven-surefire-plugin.version>
		<exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
	</properties>

	<dependencies>
		<!-- junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- netty -->
		<dependency>
			<groupId>org.jboss.netty</groupId>
			<artifactId>netty</artifactId>
			<version>${netty.version}</version>
		</dependency>

	</dependencies>
	<build>
		<finalName>wizard-http</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${project.build.directory}/lib
							</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<argLine>-XX:-UseSplitVerifier</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>${mainClass}</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>${exec-maven-plugin.version}</version>
				<configuration>
					<executable>java</executable>
					<arguments>
						<argument>-server</argument>
						<argument>-XX:MaxPermSize=64m</argument>
						<argument>-Xms128m</argument>
						<argument>-Xmx256m</argument>
						<argument>-classpath</argument>
						<classpath />
						<argument>${mainClass}</argument>
					</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
